--- a/main.css
+++ b/main.css
@@ -77,12 +77,19 @@
 .user-head{
 	width:100%;
 	height:130px;
-	background-color:green;
+	background-color:white;
 	margin-bottom:10px;
+}
+.user-head-img{
+	width:100px;
+	height:100px;
+	border:1px solid #f0f0f0;
+	border-radius:50px;
+	box-shadow:0px 0px 12px #7E7E7E;
 }
 .user-info-line{
 	width:100%;
-	height:40px;
+	height:45px;
 	border-bottom:1px solid #f0f0f0;
 	background-color:white;
 }
@@ -100,17 +107,29 @@
 .user-info-content{
 	color:#f0f0f0;
 	font-size:14px;
+	min-width:120px
+}
+.user-info-right{
+	width:30px;
+}
+.user-info-right img{
+	width:8px;
 }
 .user-info-bottom{
 	width:100%;
-	height:100px;
+	height:80px;
 }
 .user-info-btn{
 	width:80%;
-	height:50px;
+	height:40px;
 	background-color:#d0d0d0;
 	color:white;
-	line-height:50px;
+	line-height:40px;
 	padding:0px;
 	font-size:15px;
+}
+.user-value{
+	text-align:right;
+	border:0px;
+	min-width:120px
 }
